--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://ahnafhamid7:ahnafdon@cluster0.ogv30vl.mongodb.net/
+MONGODB_URL=mongodb+srv://ahnafhamid7:ahnafdon@cluster0.ogv30vl.mongodb.net/BlogApp
